WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
133679
Serialize ResourceRequests without platform request
https://bugs.webkit.org/show_bug.cgi?id=133679
Summary
Serialize ResourceRequests without platform request
Antti Koivisto
Reported
2014-06-10 09:01:54 PDT
We create platform requests in the web process just so we can serialize them. This is unnecessary work.
Attachments
patch
(6.39 KB, patch)
2014-06-10 09:18 PDT
,
Antti Koivisto
ap
: review+
buildbot
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from webkit-ews-01 for mac-mountainlion
(556.79 KB, application/zip)
2014-06-10 11:11 PDT
,
Build Bot
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2014-06-10 09:18:31 PDT
Created
attachment 232789
[details]
patch
WebKit Commit Bot
Comment 2
2014-06-10 09:20:55 PDT
Attachment 232789
[details]
did not pass style-queue: ERROR: Source/WebCore/platform/network/ResourceRequestBase.h:295: Multi line control clauses should use braces. [whitespace/braces] [4] ERROR: Source/WebCore/platform/network/ResourceRequestBase.h:297: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] Total errors found: 2 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
Alexey Proskuryakov
Comment 3
2014-06-10 09:45:51 PDT
Comment on
attachment 232789
[details]
patch Neat. Please wait for WebKit2 tests to pass (or fail in a usual way, EWS is not feeling well recently).
Build Bot
Comment 4
2014-06-10 11:11:15 PDT
Comment on
attachment 232789
[details]
patch
Attachment 232789
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.appspot.com/results/5728664004067328
New failing tests: media/track/w3c/interfaces/TextTrackCue/id.html media/track/w3c/interfaces/TextTrackCue/pauseOnExit.html media/track/w3c/interfaces/TextTrackCue/track.html media/track/w3c/interfaces/TextTrackCue/startTime.html media/track/w3c/interfaces/TextTrackCue/endTime.html media/track/w3c/interfaces/TextTrackCue/align.html
Build Bot
Comment 5
2014-06-10 11:11:18 PDT
Created
attachment 232797
[details]
Archive of layout-test-results from webkit-ews-01 for mac-mountainlion The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: webkit-ews-01 Port: mac-mountainlion Platform: Mac OS X 10.8.5
Antti Koivisto
Comment 6
2014-06-10 12:11:07 PDT
This changes nothing for WK1 so those failures are probably not related.
Antti Koivisto
Comment 7
2014-06-10 12:11:20 PDT
http://trac.webkit.org/changeset/169755
Alexey Proskuryakov
Comment 8
2014-06-10 12:39:00 PDT
Definitely unrelated, these tests became very flaky yesterday (
bug 133686
).
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug