Serialize ResourceRequests without platform request https://bugs.webkit.org/show_bug.cgi?id=133679

Reviewed by Alexey Proskuryakov.


Source/WebCore:
We create platform requests in the web process just so we can serialize them. This is unnecessary work.

* platform/network/ResourceRequestBase.h:
(WebCore::ResourceRequestBase::encodingRequiresPlatformData):
(WebCore::ResourceRequestBase::encodeWithoutPlatformData):
(WebCore::ResourceRequestBase::decodeWithoutPlatformData):

    Add encoding and decoding functions here to avoid exposing internals.

* platform/network/cf/ResourceRequest.h:
(WebCore::ResourceRequest::encodingRequiresPlatformData):

    Allow encoding without platform data if it hasn't been created yet and there is no request body.

Source/WebKit2:
* Shared/WebCoreArgumentCoders.cpp:
(IPC::ArgumentCoder<ResourceRequest>::encode):
(IPC::ArgumentCoder<ResourceRequest>::decode):

    Encode ResourceRequest directly if possible.



Canonical link: https://commits.webkit.org/151665@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@169755 268f45cc-cd09-0410-ab3c-d52691b4dbfc